--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-autoprefixer": "^3.0.1",
     "gulp-babel": "^6.1.1",
     "gulp-cache": "^0.4.2",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.0.0",
     "gulp-eslint": "^3.0.0",
     "gulp-filter": "^4.0.0",
@@ -24,7 +25,7 @@
     "gulp-sass": "^3.0.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.2.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
     "run-sequence": "^1.2.2",
@@ -42,5 +43,8 @@
         "single"
       ]
     }
+  },
+  "dependencies": {
+    "gulp-concat-js": "^0.1.0"
   }
 }
